# llobotomy

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md
gui_cpp/: .clangd  .gitignore  .imgui-version  CMakeLists.txt
gui_cpp/docs/: ENGINE_API.md  HFPROXY_PLAN.md  MODEL_HOOKS.md
gui_cpp/libs/: imscoped.hpp
gui_cpp/src/: appstate.cpp  appstate.hpp  keybindings.cpp  keybindings.hpp  logger.cpp  logger.hpp  main.cpp  style.cpp  style.hpp
gui_cpp/src/ui/: chrome.cpp  chrome.hpp  colormap.cpp  colormap.hpp  dialogs.cpp  dialogs.hpp  dockhost.cpp  dockhost.hpp  file_dialogs.cpp  file_dialogs.hpp  fmt.hpp  settings.cpp  settings.hpp  sidecar.cpp  sidecar.hpp  tooltips.cpp  tooltips.hpp  widgets.cpp  widgets.hpp
gui_cpp/src/workspaces/: architecture.cpp  attention.cpp  datasets.cpp  finetune.cpp  inference.cpp  logs.cpp  probes.cpp  raw_tensors.cpp  training.cpp  workspaces.hpp
llm_engine_cpp/: CMakeLists.txt  LICENSE  README.md
llm_engine_cpp/cmake/: AddLabeledTest.cmake
llm_engine_cpp/docs/: HFPROXY_PHASE_3_PLAN.md  HFPROXY_PHASE_4_PLAN.md  HOW_TO_ADD_A_BACKEND.md  INTEGRATION_TESTS.md  SUPPORTED_ARCHITECTURES.md  WAVE_D_LLAMACPP_PLAN.md  WAVE_E_LIBTORCH_PLAN.md
llm_engine_cpp/include/llm_engine/: capture.hpp  derived_cache.hpp  gguf_inspector_engine.hpp  gguf_parser.hpp  gguf_source.hpp  hf_proxy_engine.hpp  llama_cpp_engine.hpp  log.hpp  model.hpp  model_view.hpp  tensor_handle.hpp  tensor_source.hpp
llm_engine_cpp/scripts/: demo.sh  verify.sh
llm_engine_cpp/src/: derived_cache.cpp  gguf_inspector_engine.cpp  gguf_parser.cpp  gguf_source.cpp  hf_proxy_engine.cpp  llama_cpp_capture.cpp  llama_cpp_engine.cpp  llama_cpp_internal.hpp  log.cpp  mock_model.cpp  model_view.cpp  tensor_handle.cpp  tensor_source.cpp
llm_engine_cpp/tests/: CMakeLists.txt  test_derived_cache.cpp  test_derived_cache_threading.cpp  test_gguf_inspector_engine.cpp  test_gguf_parser.cpp  test_hf_proxy_capture.cpp  test_hf_proxy_intervention.cpp  test_hf_proxy_ws.cpp  test_llama_cpp_real.cpp  test_llama_cpp_smoke.cpp  test_load_options.cpp  test_mock_data_shapes.cpp  test_mock_model_compat.cpp  test_model_view.cpp  test_no_mock_leak.cpp  test_path_api.cpp  test_real_gguf.cpp  test_substrate_contract.cpp  test_tensor_handle.cpp  test_threading_stress.cpp
